src/test/deca/syntax/invalid/test_synt32.deca
//Resultat:
//      Erreur syntaxique : { manquante ligne 6 
class A{
boolean x;
}
class B extends A {

void method()
return x;
}
}